# comet-benchmark

./: README.md
singularity/: README.md  pytorch-cpu-multi-mnist.py  pytorch-gpu-multi-mnist.py  run-pytorch-gpu.sb
singularity/keras/: mnist-test.py  mnist_2_gpu.py  mnist_4_gpu.py  mnist_cpu.py  run-mnist-2-gpus.sb  run-mnist-4-gpus.sb  run-mnist-multi-cpus.sb  run-mnist-multi-gpus.sb
singularity/mxnet/: data.py  image_classification.py  launcher.py  mxnet-4-node.sb  run-1-node.sh  run-2-node.sh  start_scheduler.py  start_server.py  start_worker.py
singularity/pytorch/: README.md  cpu-multi-gloo.py  cpu-multi-mnist.py  gpu-multi-gloo.py  gpu-multi-mnist.py  run-mnist-multi-cpus.sb  run-mnist-multi-gpus.sb  simple_pytorch_dist_gloo.py  simple_pytorch_dist_mpi.py  simple_pytorch_dist_tcp.py
singularity/tensorflow/: cifar10.py  cifar10_input.py  cifar10_multi_cpu_train.py  cifar10_multi_gpu_train.py  distributed-mnist.py  mnist_dist.sb
singularity/tensorflow/MPI/: mnist-dist-mpi.sb  tensorflow-gpu.def
singularity/tensorflow/distributed-mnist-01/: mnist_dist.py  multicpu_mnist.py  run-mnist-gpu.sb
singularity/tensorflow/distributed-mnist-02/: cluster_dispatch.py  cluster_specs.py  example.py  mnist_dist_mpi.sb
singularity/tensorflow/distributed-mnist-mpi/: mnist_dist_loc.sb  mnist_dist_mpi.sb  pbt_cluster.py  run_loc.sh  (+1 more)
singularity/theano/: README.md  run-theano-test-cpu.sb  run-theano-test-gpu.sb  theanorc-gpu
visualization/: CMakeLists.txt  README.md  build_3d_chunk.py  demo3d_1ts.vtk  main.cpp  main.h  parasphere.py  ubuntu1804-vtk-paraview.def
(+2 files in other folders)
